# SilverCare-ImHERO

./: README.md
BE/: README.md
BE/AI-server/: .gitignore  Dockerfile  docker-compose-dev.yml  main.py  models.py  requirements.txt
BE/AI-server/services/: chat.py  disaster.py  emotion.py  mental_health.py  message_service.py  news.py  weather.py
BE/AI-server/utils/: cache.py  timezone_utils.py
BE/Image-server/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
BE/Image-server/Database/: __init__.py  accounts.py  authentication.py  connector.py  families.py  members.py  models.py
BE/Image-server/Utilities/: auth_tools.py  logging_tools.py
BE/User-server/: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  main.py  requirements.txt
BE/User-server/Database/: README.md  __init__.py  accounts.py  authentication.py  connector.py  families.py  members.py  messages.py  models.py  notifications.py  status.py  tools.py
BE/User-server/Endpoint/: README.md  models.py
BE/User-server/Routers/: README.md  accounts.py  authentication.py  chats.py  (+6 more)
EM/STT/: RAS_STT_README.md  local_server.py  main.py  socketServer.py
EM/catkin_ws/: README.md
EM/rsvp/: README.md
EM/rsvp/sensor/: CMakeLists.txt  README.md  install_dependencies.sh
EM/rsvp/sensor/include/managers/: CredentialsManager.hpp
EM/rsvp/sensor/include/sensors/: dust_sensor.hpp
EM/rsvp/sensor/src/: DataSender.cpp  main.cpp
EM/rsvp/sensor/src/managers/: CredentialsManager.cpp
EM/rsvp/sensor/src/sensors/: dust_sensor.cpp
EM/rsvp/sensor/test/: CMakeLists.txt
FE/: READ.md
FE/express-server/: README.md  app.js  package-lock.json  package.json
FE/main-user/: Dockerfile  README.md  docker-compose-dev.yml  index.html  package-lock.json  package.json
FE/sub-user/: README.md  docker-compose-dev.yml  index.html  package-lock.json  package.json
exec/: carebot-2025_02_19_14_50_02-dump.sql
(+227 files in other folders)
